--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "stripe": "^20.2.0",
     "web-vitals": "^2.1.4"
   },
